<resources>
    <string name="app_name">Morden Shop</string>
    <string name="info_first_line">Find, Discover, Choose, and buy anything online</string>

    <string name="btn_login">Login</string>
    <string name="btn_admin_login">Login Admin</string>
    <string name="btn_join_now">Join Now</string>
    <string name="btn_already_account">Already have an Account? Login</string>
    <string name="enter_email">Enter email</string>
    <string name="user_phone">Enter Phone</string>
    <string name="user_password">Enter Password</string>

    <string name="user_name">Enter name</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="user_full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="user_address">Address</string>
    <string name="user_city_name">Enter your city.</string>

    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget Password?</string>
    <string name="admin">I am an Admin</string>
    <string name="not_admin">I am not an Admin</string>


    <string name="btn_create_account">Create Account</string>
    <string name="popular_product">Popular Product</string>

    <string name="add_new_product">Add New Product</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="product_price">Product Price</string>
    <string name="add_product">Add Product</string>
    <string name="user_logout">Log Out</string>
    <string name="welcome">Welcome</string>
    <string name="first_title">Almost there!</string>
    <string name="second_title">Please tel us a bit about yourself</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>

    <string name="cart">Cart</string>
    <string name="order">Orders</string>
    <string name="category">Category</string>
    <string name="setting">Setting</string>
    <string name="logout">Log out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
