<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/login_applogo"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/app_logo"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:id="@+id/welcomeId"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="#000"
        android:layout_below="@id/login_applogo"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:textColorHint="@color/gray"
        android:layout_below="@+id/welcomeId"
        android:id="@+id/login_phone_wrapperId">
        <EditText
            android:id="@+id/edt_login_phoneId"
            android:hint="@string/user_phone"
            style="@style/edt1"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:textColorHint="@color/gray"
        android:layout_below="@+id/login_phone_wrapperId"
        android:id="@+id/login_password_wrapperId">
        <EditText
            android:id="@+id/edt_login_passwordId"
            android:hint="@string/user_password"
            style="@style/edt1"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/login_password_wrapperId"
        android:layout_marginTop="5dp">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/remember_me_chkb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.CompoundButton.CheckBox"
            android:textColor="@color/gray"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:text="@string/remember_me"
            android:layout_marginLeft="17dp">

        </androidx.appcompat.widget.AppCompatCheckBox>

        <TextView
            android:id="@+id/forget_passwordId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textSize="16sp"
            android:layout_marginLeft="80dp"
            android:textColor="@color/gray"/>

    </LinearLayout>
    <Button
        android:id="@+id/btn_loginId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:padding="17dp"
        android:background="@drawable/buttons"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        android:text="@string/btn_login"/>
    <TextView
        android:id="@+id/admin_panelId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/btn_loginId"
        android:textSize="20sp"
        android:layout_marginLeft="80dp"
        android:layout_marginEnd="23dp"
        android:textColor="@color/gray"/>
    <TextView
        android:id="@+id/not_admin_panelId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_admin"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/btn_loginId"
        android:textSize="20sp"
        android:layout_marginLeft="80dp"
        android:layout_marginStart="23dp"
        android:layout_alignParentStart="true"
        android:visibility="invisible"
        android:textColor="@color/gray"/>
</RelativeLayout>