<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/login_applogo"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/app_logo"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:id="@+id/first_titleId"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="#000"
        android:layout_below="@id/login_applogo"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/second_title"
        android:id="@+id/second_titleId"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_marginTop="5dp"
        android:layout_below="@id/first_titleId"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:textColorHint="@color/gray"
        android:layout_below="@+id/second_titleId"
        android:id="@+id/login_name_wrapperId">
        <EditText
            android:id="@+id/edt_nameId"
            android:hint="@string/user_name"
            style="@style/edt1"
           />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:textColorHint="@color/gray"
        android:layout_below="@+id/login_name_wrapperId"
        android:id="@+id/login_phone_wrapperId">
        <EditText
            android:id="@+id/edt_phoneId"
            android:hint="@string/user_phone"
            style="@style/edt1"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:textColorHint="@color/gray"
        android:layout_below="@+id/login_phone_wrapperId"
        android:id="@+id/login_password_wrapperId">
        <EditText
            android:id="@+id/edt_passwordId"
            android:hint="@string/user_password"
            style="@style/edt1"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btn_createId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_password_wrapperId"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:padding="17dp"
        android:background="@drawable/buttons"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        android:text="@string/btn_create_account"/>
</RelativeLayout>