<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.farzana.farzanacollection.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.farzana.farzanacollection.ui.gallery.GalleryFragment"
        android:label="@string/cart"
        tools:layout="@layout/activity_cart" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.farzana.farzanacollection.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_setting"
        android:name="com.farzana.farzanacollection.Fragment.SettingFragment"
        android:label="fragment_setting"
        tools:layout="@layout/fragment_setting" />

    <activity
        android:id="@+id/productDetailsActivity"
        android:name="com.farzana.farzanacollection.ProductDetailsActivity"
        android:label="fragment_product_details"
        tools:layout="@layout/fragment_product_details" />

</navigation>