<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmFinalOrderActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Billing Details"
        android:id="@+id/first_titleId"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:background="@color/colorPrimaryDark"
        android:padding="10dp"
        android:layout_marginTop="20dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:textColorHint="@color/gray"
        android:layout_below="@+id/first_titleId"
        android:id="@+id/edt_name_wrapperId">
        <EditText
            android:id="@+id/edt_confirm_nameId"
            android:hint="@string/user_full_name"
            style="@style/edt1"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:textColorHint="@color/gray"
        android:layout_below="@+id/edt_name_wrapperId"
        android:id="@+id/login_phone_wrapperId">
        <EditText
            android:id="@+id/edt_confirm_phone"
            android:hint="@string/user_phone"
            style="@style/edt1"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:textColorHint="@color/gray"
        android:layout_below="@+id/login_phone_wrapperId"
        android:id="@+id/edt_confirm_address_wrapperId">
        <EditText
            android:id="@+id/edt_confirm_address"
            android:hint="@string/user_address"
            style="@style/edt1"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:textColorHint="@color/gray"
        android:layout_below="@+id/edt_confirm_address_wrapperId"
        android:id="@+id/login_city_name_wrapperId">
        <EditText
            android:id="@+id/edt_confirm_cityName"
            android:hint="@string/user_city_name"
            style="@style/edt1"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="17dp"
        android:layout_margin="20dp"
        android:background="@drawable/buttons"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        android:layout_alignParentBottom="true"
        android:text="Confirm"/>

</RelativeLayout>