<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.SettingFragment">

    <!-- TODO: Update blank fragment layout -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_setting"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/close_setting_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Close"
                    android:textColor="@color/colorWhite"
                    android:textSize="17dp"
                    android:textStyle="bold"
                    android:layout_alignParentStart="true"
                    />
                <TextView
                    android:id="@+id/update_setting_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Update"
                    android:layout_marginRight="10dp"
                    android:textColor="@color/colorWhite"
                    android:textSize="17dp"
                    android:textStyle="bold"
                    android:layout_alignParentEnd="true"
                    />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:id="@+id/setting_profile_picture"
        android:layout_below="@+id/appbar_setting"
        android:src="@drawable/profile"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/profile_image_change"
        android:layout_below="@+id/setting_profile_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Change Profile"
        android:textSize="17dp"
        android:layout_marginTop="4dp"
        android:textColor="#000"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:textColorHint="@color/gray"
        android:layout_below="@+id/profile_image_change"
        android:id="@+id/login_name_wrapperId">
        <EditText
            android:id="@+id/edt_setting_nameId"
            android:hint="@string/user_full_name"
            style="@style/edt1"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:textColorHint="@color/gray"
        android:layout_below="@+id/login_name_wrapperId"
        android:id="@+id/login_phone_wrapperId">
        <EditText
            android:id="@+id/edt_setting_phoneId"
            android:hint="@string/user_phone"
            android:inputType="phone"
            style="@style/edt1"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:textColorHint="@color/gray"
        android:layout_below="@+id/login_phone_wrapperId"
        android:id="@+id/login_password_wrapperId">
        <EditText
            android:id="@+id/edt_setting_address"
            android:hint="@string/user_address"
            style="@style/edt1"
            />
    </com.google.android.material.textfield.TextInputLayout>

</RelativeLayout>